correct contrast on let's connect

--- a/style.css
+++ b/style.css
@@ -335,7 +335,7 @@ img {
   font-weight: 500;
   font-size: 18px;
   line-height: 24px;
-  color: #7f8cff;
+  color: #1a30ff;
   margin-top: 20px;
 }
 
@@ -670,7 +670,7 @@ input {
     font-weight: 500;
     font-size: 18px;
     line-height: 24px;
-    color: #7f8cff;
+    color: #1a30ff;
     margin-top: 0;
   }
 
